-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: 7.0.0, 8.0.0, 8.3.0-rc0, 8.2.0
-
Component/s: None
-
Storage Execution
-
Fully Compatible
-
ALL
-
-
Storage Execution 2025-10-27, Storage Execution 2025-11-10
-
0
-
None
-
None
-
None
-
None
-
None
-
None
-
None
I noticed when fixing MGOMIRROR-587 that the server, when it receives an `applyOps` for time-series collection creation, auto-creates the time/meta index.
This happens despite that the index itself is a separate oplog entry.
This issue is fairly easy to accommodate by just dropping the index after collection creation, but it’s still unexpected behavior in the server. joan.bruguera-mico@mongodb.com suggested that I open this ticket.
- related to
-
SERVER-112817 ApplyOps can create a legacy time-series collection without a corresponding buckets namespace
-
- Closed
-