SERVER-111180 Do not create index on time and meta fields when creating time-series collection using the applyOps command (#42875)

GitOrigin-RevId: fcf734d2b80943163dfc5b9b67f8490aaf157179